--- a/math-0404335/math-0404335.tex
+++ b/math-0404335/math-0404335.tex
@@ -1737,7 +1737,8 @@ Perfect!
 Please note that
 if the two bit strings aren't the same size, then you have to add 0's \textbf{on the left} to the
 smaller one in order to make them the same size.  Then you can look at the corresponding bits.
- 
+
+\medskip
 {\footnotesize [\emph{Exercise for budding mathematicians:} Can you check more values? By hand? On a computer?
 Can you prove that Lucas was right?!  It shouldn't be too difficult to convince yourself.
 As usual, it's much more difficult to \textbf{discover} a new result, 
@@ -1745,8 +1746,11 @@ to \textbf{imagine} the happy possibility,
 than to verify that it's correct. Imagination, inspiration and hope are the key!
 Verification is routine. \textbf{Anyone} can do that, any competent professional.
 I prefer tormented, passionate searchers for Truth!
-People who have been seized by a demon!---hopefully a \textbf{good} demon, but a demon nevertheless!]}
- 
+People who have been seized by a demon!---hopefully a \textbf{good} demon, but a demon nevertheless!]
+
+}
+\medskip
+
 And how do Matiyasevich and Jones express (if a bit is on in $k$ it also
 has to be on in $n$) as a diophantine equation?
  
@@ -2149,11 +2153,14 @@ Otherwise it's the list beginning with ($f$ of the
 first element of $x$) followed by 
 ``map'' $f$ of the rest of $x$.
  
+\medskip
 {\footnotesize
 [For more on my conception of LISP, see my books \emph{The Unknowable}
 and \emph{Exploring Randomness,} in which I explain LISP, and my book
 \emph{The Limits of Mathematics,} in which I use it. These are technical books.]
+
 }
+\medskip
 
 \section*{My Diophantine Equation for LISP}
 
@@ -2328,14 +2335,18 @@ all philosophies: Catholic, Protestant, Cabala, medieval scholastics, the ancien
 the Chinese\ldots\ It pains me to say that Newton enjoyed witnessing the executions
 of counterfeiters he pursued as Master of the Mint.
  
+\medskip
 {\footnotesize [The science-fiction writer Neal Stephenson has recently published the first 
 volume, \emph{Quicksilver,} 
 of a trilogy about Newton versus Leibniz, and comes out strongly
 on Leibniz's side.
 See also Isabelle Stengers, \emph{La Guerre des sciences aura-t-elle lieu?,} a
 play about Newton vs.\ Leibniz, and the above mentioned book, consisting
-of two plays and a long essay, called \emph{Newton's Darkness.}]}
- 
+of two plays and a long essay, called \emph{Newton's Darkness.}]
+
+}
+\medskip
+
 Leibniz was also a fine physicist. In fact, Leibniz was good at everything.
 For example, there's his remark that ``music is the unconscious joy that the
 soul experiences on counting without realising that it is counting.''
@@ -2361,13 +2372,18 @@ in English, \emph{Discourse on Metaphysics}---had made a key observation
 about complexity and randomness, \textbf{the} key observation that started
 me on all this at age 15!
  
+\medskip
+
 {\footnotesize [Actually, Weyl himself was a very unusual mathematician, Hilbert's mathematical heir and
 philosophical opponent, who wrote a beautiful book on philosophy that I had
 read as a teenager: \emph{Philosophy of Mathematics and Natural Science,}
 Princeton University Press, 1949. In that book Weyl also recounts Leibniz's idea,
 but the wording is not as sharp, it's not formulated as clearly and as dramatically as in Weyl's
 1932 Yale book. Among his other works: an important book on relativity, \emph{Raum-Zeit-Materie}
-(space, time, matter).]}
+(space, time, matter).]
+
+}
+\medskip
  
 ``Could Leibniz have done it?!'', I asked myself. I put the matter aside until such time as
 I could check what he had actually said. Years passed\ldots\  Well, for my Bonn paper I finally
@@ -3821,10 +3837,10 @@ shows that the calculus and in particular so-called power series
 \[
    a_0 + a_1 x + a_2 x^2 + a_3 x^3 + \ldots
 \] 
-make much more sense with imaginaries than without.
-The final argument in their favor, if any was needed, was provided by Schr\"odinger's equation
+make much more sense with imaginaries than without. The final argument in their favor, if any was needed, was provided by Schr\"odinger's equation
 in quantum mechanics, in which imaginaries are absolutely essential, since quantum probabilities
 (so-called ``probability amplitudes'') have to have direction as well as magnitude.]
+
 }
 
 \medskip
@@ -5615,6 +5631,7 @@ if the $n$th bit of $\Omega$ is a 0.
 \hline
 \end{tabular}
 \end{center}
+
 }
 
 {\footnotesize
