--- a/2206.09206/Main.tex
+++ b/2206.09206/Main.tex
@@ -1,4 +1,4 @@
-\documentclass[acmsmall,fleqn]{acmart}
+\documentclass[acmsmall,fleqn,12pt]{acmart}
 \settopmatter{printfolios=true,printccs=false,printacmref=false}
 
 %% Journal information
