--- a/2207.00478/main.tex
+++ b/2207.00478/main.tex
@@ -1,11 +1,55 @@
-\documentclass{article}
+\documentclass[12pt]{article}
 \usepackage[utf8]{inputenc}
-\usepackage{a4wide}
 \usepackage{xcolor}
 \usepackage{amsmath}
 \usepackage{amssymb}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
+
+
 \usepackage{graphicx}
-\usepackage{hyperref}
 \usepackage{multirow}
 \usepackage{array}
 
@@ -28,17 +72,10 @@
 \newcommand{\TUMaff}{Physik-Department, Technische Universit\"at M\"unchen, James-Franck-Strasse 1, 85748 Garching, Germany}
 \newcommand{\GZemail}{zanderi@mpp.mpg.de}
 
-\title{The Higgs boson Turns Ten}
-\author{Gavin P. Salam,$^{1,2}$ Lian-Tao Wang,$^{3}$ Giulia Zanderighi$^{4,5,6}$\\
-    \normalsize $^1$ \OXaff,\\
-    \normalsize $^2$ \ASCaff,\\
-    \normalsize $^3$ \Chiaff,\\
-    \normalsize $^4$ \MPIaff\\
-    \normalsize $^5$ \TUMaff\\
-    \normalsize $^6$ \GZemail\\    
-}
+\title{The Higgs Boson Turns Ten}
+\author{Gavin P. Salam \\ Lian-Tao Wang \\ Giulia Zanderighi}
 
-\date{}
+\date{2022}
 %February 2022}
 
 \begin{document}
@@ -157,7 +194,7 @@ effects that are hitherto unknown and lie outside the Standard Model.
 
 
 %======================================================================
-\section*{The Higgs boson in the Standard Model}
+\section{The Higgs boson in the Standard Model}
 
 In the Standard Model, aside from the Higgs boson, there are two kinds
 of particles.
@@ -314,7 +351,7 @@ elementary particle masses, because the strong force contributes substantially t
 
 
 %======================================================================
-\section*{What we know so far and how}
+\section{What we know so far and how}
 
 The Higgs mechanism provides the simplest model to explain particle
 masses in a way that is consistent with the electroweak interactions.
@@ -584,7 +621,7 @@ hundreds of particles per collision.
 % 
 
 %======================================================================
-\section*{What is still to be established?}
+\section{What is still to be established?}
 
 In many respects, the experimental exploration of the Higgs sector is
 only in its infancy.
@@ -751,7 +788,7 @@ electroweak energy scale~\cite{ATLAS:2020jwz,CMS:2020zge}.
 
 
 %======================================================================
-\section*{Higgs and major open questions of particle physics and cosmology}
+\section{Higgs and major open questions of particle physics and cosmology}
 
 Many of the above measurements are of interest not just owing to the fundamental nature of the
 Higgs sector within the Standard Model, but because they
@@ -961,7 +998,7 @@ boson, as mentioned above, will bring considerably improved
 sensitivity to such scenarios.
 
 
-\section*{Conclusions}
+\section{Conclusions}
 
 The discovery of the Higgs boson at the LHC marked the beginning of a
 new era of particle physics.
@@ -989,7 +1026,7 @@ to be established, such as the nature of Higgs potential, or opening a
 window to new horizons and major mysteries of the universe.
 
 
-\section*{Acknowledgments}
+\section{Acknowledgments}
 
 Our perspective on the Higgs sector has been shaped by exchanges
 with many of our colleagues.
