--- a/1712.04721/v11.review-higgs.tex
+++ b/1712.04721/v11.review-higgs.tex
@@ -1,5 +1,5 @@
 %\documentclass[final,sort&compress,a4paper,10pt,3p]{elsarticle}
-\documentclass[final,twoside,12pt]{article}
+\documentclass[final,12pt]{article}
 
 \usepackage{latexsym}
 \usepackage{graphicx}
