--- a/1111.5057/maxentERLT_FINAL_230612.tex
+++ b/1111.5057/maxentERLT_FINAL_230612.tex
@@ -1,5 +1,5 @@
 
-\documentclass[pra,superscriptaddress,nofootinbib,a4paper,twocolumn]{revtex4}
+\documentclass[pra,superscriptaddress,nofootinbib,12pt]{revtex4-2}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \usepackage{amsmath}
 \usepackage{amsfonts}
@@ -14,6 +14,48 @@
 %TCIDATA{LastRevised=Wednesday, September 09, 2009 18:09:04}
 %TCIDATA{<META NAME="GraphicsSave" CONTENT="32">}
 
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 
 \newcommand{\lbar}{\lambdabar}
 \newcommand{\mean}{d}
@@ -78,6 +120,7 @@ and that the phenomena that do \emph{not} arise in Gaussian quantum mechanics pr
 
 %\newpage
 
+\newpage
 
 \section{Introduction}
 
@@ -1717,9 +1760,9 @@ arXiv:1003.5209.
 Plastino, Phys. Rev. Lett. \textbf{88}, 210601 (2002).
 
 
-%\bibitem{Ballentine94} L. E. Ballentine, Y. Yang, and J. P. Zibin, “Inadequacy
-%of Ehrenfest’s Theorem to Characterize the Classical
-%Regime”, Phys. Rev. A 50, 2854-2859 (1994).
+%\bibitem{Ballentine94} L. E. Ballentine, Y. Yang, and J. P. Zibin, ï¿½Inadequacy
+%of Ehrenfestï¿½s Theorem to Characterize the Classical
+%Regimeï¿½, Phys. Rev. A 50, 2854-2859 (1994).
 
 %\bibitem{Emerson01} J. V. Emerson, ``Quantum Chaos and Quantum-
 %Classical Correspondence'', Ph.D. thesis (2001),
