--- a/2007.00785/2007.00785-psu.tex
+++ b/2007.00785/2007.00785-psu.tex
@@ -363,7 +363,8 @@ Next, we describe the main features of a model of the quantum theory of particle
 \begin{equation}\label{Hilbert}
 \mathcal{H}:= L^{2}(\mathbb{R}^{d}, \d^{d}x)\,,
 \end{equation}
-where $d$ is the dimension of physical space, $\mathbb{R}^{d}$, (with $d=2$ or $3$, in a realistic model).
+where $\mathbb{R}^{d}\equiv \mathbb{R}^{d}_{x}$ is the configuration space of the particle, and $\d^{d}x$ 
+is the Lebesgue measure on $\mathbb{R}^{d}$. In a realistic model we might have $d=2$ or $3$.
 General states of the particle are given by \textit{density matrices}, i.e., by non-negative, trace-class 
 operators of trace one acting on $\mathcal{H}$. The Hilbert space of state vectors of the subsystem consisting of the electromagnetic field and the photomultipliers is given by a direct integral of fibre spaces 
 $$\mathfrak{H} = \int^{\oplus}_{\mathbb{R}^{d}} d^{d}{\bf{q}}\, \mathfrak{H}_{{\bf{q}}}\,, \qquad \text{with  }\,\, 
