--- a/1801.08132/qm_essay_final.tex
+++ b/1801.08132/qm_essay_final.tex
@@ -105,7 +105,6 @@ bookmarksopenlevel=10
 
 \definecolor{nicered}{rgb}{0.7,0.1,0.1}
 \definecolor{nicegreen}{rgb}{0.1,0.5,0.1}
-\hypersetup{colorlinks,citecolor=black,linkcolor=black,urlcolor=black}
 \newcommand{\note}[1]{{\color{blue} #1}}
 \newcommand{\ashmeet}[1]{{\color{red} #1}}
 
@@ -119,42 +118,31 @@ bookmarksopenlevel=10
 
 
 \begin{document}
-\hfill CALT-TH-2018-006
-\hfill
-
 \setcounter{footnote}{0}
 
 \vspace{2cm}
-\thispagestyle{empty}
-\begin{center}
-{\LARGE\bf
-Mad-Dog Everettianism:\\ \vskip.2cm
-Quantum Mechanics at Its Most Minimal}\\
-\bigskip\vspace{1cm}{
-{\large Sean M.\ Carroll and Ashmeet Singh$^{\dag}$\blfootnote{$^{\dag}$e-mail: \url{seancarroll@gmail.com, ashmeet@caltech.edu} \\ Submitted to the Foundational Questions Institute Essay Competition, ``What Is Fundamental?" \\Corresponding author: SMC.}}
-} \\[7mm]
- {\it Walter Burke Institute for Theoretical Physics\\
-    California Institute of Technology \\
-    1200 E. California Blvd., Pasadena, CA 91125} \\
- \end{center}
-\bigskip
-\centerline{\large\bf Abstract}
+\title{Mad-Dog Everettianism:\\
+Quantum Mechanics at Its Most Minimal}
 
-\begin{quote} \small
+\author{ Sean M.\ Carroll and Ashmeet Singh}
+\date{23 Jan 2018}
+
+\maketitle
+\thispagestyle{empty}
+
+\begin{abstract}
 To the best of our current understanding, quantum mechanics is part of the most fundamental picture of the universe.
 It is natural to ask how pure and minimal this fundamental quantum description can be.
 The simplest quantum ontology is that of the Everett or Many-Worlds interpretation, based on a vector in Hilbert space and a Hamiltonian.
 Typically one also relies on some classical structure, such as space and local configuration variables within it, which then gets promoted to an algebra of preferred observables.
 We argue that even such an algebra is unnecessary, and the most basic description of the world is given by the spectrum of the Hamiltonian (a list of energy eigenvalues) and the components of some particular vector in Hilbert space.
 Everything else -- including space and fields propagating on it -- is emergent from these minimal elements.
-\end{quote}
+\end{abstract}
+
+\newpage
 
 
-\vfill\eject
-
-\begin{itemize}
-\item \textbf{Taking quantum mechanics seriously}
-\end{itemize}
+\section{Taking quantum mechanics seriously}
 
 The advent of modern quantum mechanics marked a profound shift in how we view the fundamental laws of nature: it was not just a new theory, but a new \emph{kind} of theory, a dramatic shift from the prevailing Newtonian paradigm.
 Over nine decades later, physicists have been extremely successful at applying the quantum rules to make predictions about what happens in experiments, but much less successful at deciding what quantum mechanics actually \emph{is} -- its fundamental ontology and indeed its relation to underlying reality, if any.
@@ -173,10 +161,7 @@ Our approach is distinguished by thinking of that state as a vector in Hilbert s
 All of the additional elements familiar in physical theories, we will argue, can be emergent from the state vector (cf.\ \cite{Giddings:2015lla}).
 We call this approach ``Mad-Dog Everettianism," to emphasize that it is as far as we can imagine taking the program of stripping down quantum mechanics to its most pure, minimal elements.\footnote{The name is inspired by philosopher Owen Flanagan's description of his colleague Alex Rosenberg's philosophy as ``Mad-Dog Naturalism."}
 
-\newpage
-\begin{itemize}
-\item \textbf{The role of classical variables}
-\end{itemize}
+\section{The role of classical variables}
 
 The traditional way to construct a quantum theory is to posit some classical configuration space $\mathbf{X}$ (which could be momentum space or some other polarization of phase space), then considering the space of all complex-valued functions on that space.
 With an appropriate inner product $\langle \cdot,\cdot\rangle$, the subset of square-integrable functions forms a Hilbert space:
@@ -210,9 +195,7 @@ and the state is specified by its componenents in the energy eigenbasis,
 \ee
 The question becomes, how do we go from such austere lists of numbers to the fullness of the world around us?
 
-\begin{itemize}
-\item \textbf{The role of emergence}
-\end{itemize}
+\section{The role of emergence}
 
 One might ask why, if the fundamental theory of everything is fixed by the spectrum of some Hamiltonian, we don't simply imagine writing the state of the universe in the energy eigenbasis, where its evolution is trivial?
 The answer is the one that applies to any example of emergence: there might be other descriptions of the same situation that provide useful insight or computational simplification.
@@ -223,9 +206,7 @@ But by thinking of it as $N$ particles moving in a $3$-dimensional space of allo
 Similarly, writing an abstract vector in Hilbert space as a wave function over some classical variables can provide crucial insight into the most efficient and insightful way to think of what is happening to the system.
 
 
-\begin{itemize}
-\item \textbf{Local finite-dimensionality}
-\end{itemize}
+\section {Local finite-dimensionality}
 
 The Hilbert spaces considered by physicists are often infinite-dimensional, from a simple harmonic oscillator to quantum field theories. For separable Hilbert spaces (finite-dimensional or infinite-dimensional countable), the Stone-von~Neumann theorem guarantees us uniqueness of the irreducible representation of the algebra of the canonical commutation relations (CCRs), up to unitary equivalence. 
 In non-separable Hilbert spaces, however, there can be unitarily inequivalent representations of the CCRs, implying that the physical subspaces spanned by eigenstates of operators in a particular representation will be different. 
@@ -253,9 +234,7 @@ Given some overall pure state $|\psi\rangle \in \HH$, physics within this region
 In that case, there is no issue of specifying the correct algebra of observables: the algebra is simply ``all Hermitian operators acting on $\HH_\R$."
 Any further structure must emerge from the spectrum of the Hamiltonian and the quantum state.
 
-\begin{itemize}
-\item \textbf{Spacetime from Hilbert space}
-\end{itemize}
+\section {Spacetime from Hilbert space}
 
 Fortunately, we are guided in our quest by the fact that we know a great deal about what an appropriate emergent description should look like -- a local effective field theory defined on a semiclassical four-dimensional dynamical spacetime.
 The first step is to choose a decomposition of the Hilbert space $\HH_\R$ (representing, for example, the interior of our cosmic horizon) into finite-dimensional micro-factors.
@@ -287,9 +266,7 @@ That gives our graph an emergent spatial geometry, from which we can find a best
 (Alternatively, the entropy across a surface can be associated with the surface's area, and the emergent geometry defined using a Radon transform \cite{Cao:2017hrv}.)
 As the quantum state evolves with time according to the Schr\"odinger equation, the spatial geometry does as well; interpreting these surfaces as spacelike slices with zero extrinsic curvature yields an entire spacetime with a well-defined geometry.
 
-\begin{itemize}
-\item \textbf{Emergent classicality}
-\end{itemize}
+\section {Emergent classicality}
 
 A factorization of Hilbert space into local micro-factors is not quite the entire story.
 To make contact with the classical world as part of an emergent description, we need to further factorize the degrees of freedom within some region into macroscopic ``systems'' and a surrounding ``environment," and define a preferred basis of ``pointer states'' for each system. 
@@ -327,9 +304,7 @@ We think of quantum systems as representing objects with positions and momenta b
 We think of ourselves as living in position space, rather than in momentum space, because those are the variables in terms of which the Hamiltonian appears local.
 
 
-\begin{itemize}
-\item \textbf{Gravitation from entanglement}
-\end{itemize}
+\section {Gravitation from entanglement}
 
 We have argued that the geometry of spacetime can be thought of as arising from the entanglement structure of the quantum state in an appropriate factorization.
 To match our empirical experience of the world, this emergent spacetime should respond to emergent energy-momentum through Einstein's equation of general relativity.
@@ -353,11 +328,7 @@ If the overall dynamics are approximately Lorentz invariant (which they must be 
 There are a number of assumptions at work here, but it seems plausible that the spacetime dynamics familiar from general relativity can arise in an emergent spacetime purely from generic features of the entanglement structure of the quantum state.
 Following our quantum-first philosophy, this would be an example of finding gravity within quantum mechanics, rather than quantizing a classical model for gravitation.
 
-\newpage
-
-\begin{itemize}
-\item \textbf{The problem(s) of time}
-\end{itemize}
+\section {The problem(s) of time}
 
 Given our ambition to find the most minimal fundamental description of reality, it is natural to ask whether time as well as space could be emergent from the wave function.
 The Wheeler-deWitt equation of canonical quantum gravity takes the form
@@ -382,9 +353,7 @@ These can be used to compute a modular Hamiltonian (given by the negative of the
 Thus it is conceivable that time as well as space could be emergent, at the cost of positing a fundamental density operator describing the state of the universe.\footnote{If time is fundamental rather than emergent, there is a very good reason to believe that the entirety of Hilbert space is infinite-dimensional, even if the factor describing our local region is finite-dimensional; otherwise the dynamics would be subject to recurrences and Boltzmann-brain fluctuations \cite{Carroll:2008yd}.}
 
 
-\begin{itemize}
-\item \textbf{Prospects and puzzles}
-\end{itemize}
+\section {Prospects and puzzles}
 
 The program outlined here is both ambitious and highly speculative.
 We find it attractive as a way of deriving most of the familiar structure of the world from a minimal set of truly quantum ingredients.
