--- a/2202.09425/fields.tex
+++ b/2202.09425/fields.tex
@@ -439,7 +439,7 @@ At this stage, more foundational work is needed to determine how Grassmann numbe
 According to the field approach, quantum field theory is fundamentally a theory of fields.  That prompts the question as to why particle descriptions work as well as they do in the situations where they are successful.  How do quantum particles arise from quantum fields?
 
 
-One way to address this general question is to analyze particular experimental situations with the goal of showing that the relevant wave functionals exhibit the appropriate particle-like behavior.  Proponents of wave functionals have studied the double-slit experiment, the Stern-Gerlach experiment, the photoelectric effect, and Compton scattering.\footnote{See \citet[pg.\ 363--373]{bohm1987}; \citet[ch.\ 11]{bohmhiley}; \citet[sec.\ 4]{kaloyerou1994}; \citeauthor{valentini1992} (\citeyear[sec.\ 4.1]{valentini1992}; \citeyear[pg.\ 54--55]{valentini1996}); \citet{spinmeasurement}.}  In the example of an idealized Stern-Gerlach experiment for the z-spin measurement of an x-spin up electron, the task would be to show that a wave functional for the electron that is initially centered on a classical Dirac field state describing the electron as spinning about the x-axis will evolve into a wave functional that is in a superposition of two separate pieces corresponding to the two possible measurement outcomes: one piece centered on a classical Dirac field state describing the electron as deflected upwards and spinning about the z-axis, and another piece centered on a classical Dirac field state describing the electron as deflected downwards and spinning about the z-axis in the opposite direction (see \citealp[sec.\ 7]{spinmeasurement}).  Further, one would need to show that the probability density over Dirac field configurations yields the correct probabilities for the two outcomes.
+One way to address this general question is to analyze particular experimental situations with the goal of showing that the relevant wave functionals exhibit the appropriate particle-like behavior.  Proponents of wave functionals have studied the double-slit experiment, the Stern-Gerlach experiment, the photoelectric effect, and Compton scattering.\footnote{See \citet[pg.\ 363--373]{bohm1987}; \citet[ch.\ 11]{bohmhiley}; \citet[sec.\ 4]{kaloyerou1994}; \citeauthor{valentini1992} (\citeyear[sec.\ 4.1]{valentini1992}; \citeyear[pg.\ 54--55]{valentini1996}); \citet{spinmeasurement}.}  In the example of an idealized Stern-Gerlach experiment for the $z$-spin measurement of an $x$-spin up electron, the task would be to show that a wave functional for the electron that is initially centered on a classical Dirac field state describing the electron as spinning about the $x$-axis will evolve into a wave functional that is in a superposition of two separate pieces corresponding to the two possible measurement outcomes: one piece centered on a classical Dirac field state describing the electron as deflected upwards and spinning about the $z$-axis, and another piece centered on a classical Dirac field state describing the electron as deflected downwards and spinning about the $z$-axis in the opposite direction (see \citealp[sec.\ 7]{spinmeasurement}).  Further, one would need to show that the probability density over Dirac field configurations yields the correct probabilities for the two outcomes.
 
 
 In addition to understanding particular experimental situations within the field approach, it is also important to understand why, in general, electrons can be described by four-component wave functions obeying the Dirac equation in relativistic quantum mechanics.\footnote{One might also wish to derive some quantum theory for the photon, but (as was discussed in section \ref{PHOTONSsection}) we have no theory like relativistic electron quantum mechanics for the photon---so the goalposts will look different for the photon.}  This theory has proved useful in many applications that go beyond non-relativistic quantum mechanics but do not require full quantum field theory, such as calculations of electron structure for atoms and molecules with heavy nuclei in quantum chemistry.\footnote{See \citet{desclaux2002}.}  How does the description of electrons in relativistic quantum mechanics approximate the behavior of wave functionals in quantum field theory?  If we can derive relativistic quantum mechanics from a field approach to quantum field theory, then it is straightforward to explain the success of non-relativistic quantum mechanics (as the derivation of the Pauli equation from the Dirac equation is well-known\footnote{See \citet[sec.\ 1.4]{bjorkendrell}; \citet[sec.\ 33]{lifshitzRQM}; \citet[sec.\ 10.4]{bohmhiley}; \citet[sec.\ 2.6]{ryder}; \citet{nowakowski1999}.}).
