--- a/2011.05908/Ohne-Titel.tex
+++ b/2011.05908/Ohne-Titel.tex
@@ -1,13 +1,57 @@
-\documentclass[12pt,a4paper]{article}
+\documentclass[12pt]{article}
 \hyphenation{pa-ra-me-ter in-de-fi-nite}
 \usepackage[english]{babel}
 \usepackage[T1]{fontenc}
-\usepackage[adobe-utopia]{mathdesign}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
 \usepackage[intlimits]{amsmath}
+\usepackage[largesc]{newpxtext}
+\usepackage[smallerops]{newpxmath}
+\usepackage[cal=cm]{mathalfa}
+
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+\parskip 2pt
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 \usepackage{graphicx}
-\usepackage{a4wide}
 \usepackage{amsbsy}
-\usepackage{hyperref}
 \usepackage{hyphenat}
 \usepackage{physics}
 \usepackage{german}
@@ -19,22 +63,22 @@
 
 
 %General Layout
-\setlength{\textheight}{24cm}
-\addtolength{\voffset}{-1cm}
-\setlength{\parskip}{0.2cm}
-\parindent=0pt
+%\setlength{\parskip}{0.2cm}
 
 \newcommand{\eins}{\mbox{$1 \hspace{-1.0mm} {\bf l}$}} 
 
 
 \begin{document}
-
-\title{\textsc{\huge{The state is not abolished, it withers away: how quantum field theory became a theory of scattering\footnote{This paper was originally published in Studies in the History and Philosophy of Modern Physics, Volume 60 (2017), pp. 46-80. Due to formatting mistakes that appeared only after proof-reading, parts of that paper are garbled. An erratum was published in SHPMP that links to this version, which is the definitive version of the paper.} }}}
+\date{11 Nov 2020}
+\title{\textsc{{The state is not abolished, it withers away: how quantum field theory became a theory of scattering\footnote{This paper was originally published in Studies in the History and Philosophy of Modern Physics, Volume 60 (2017), pp. 46-80. Due to formatting mistakes that appeared only after proof-reading, parts of that paper are garbled. An erratum was published in SHPMP that links to this version, which is the definitive version of the paper.} }}}
 \author{Alexander S. Blum\thanks{ablum@mpiwg-berlin.mpg.de}}
 \affil{Max Planck Institute for the History of Science, Boltzmannstra"se 22, 14195 Berlin, Germany}
 \maketitle
+\thispagestyle{empty}
 
-Learning quantum field theory (QFT) for the first time, after first learning quantum mechanics (QM), one is (or maybe, rather, I was) struck by the change of emphasis: The notion of the quantum state, which plays such an essential role in QM, from the stationary states of the Bohr atom, over the Schr"odinger equation to the interpretation debates over measurement and collapse, seems to fade from view when doing QFT. Not that it's gone - as any physicist will be quick to tell you, QFT is simply a quantum theory, with all the general structure of QM taken over unchanged. But the quantum state is hardly mentioned, when dealing with Feynman diagrams, path integrals and all the other mainstays of an introductory QFT course.
+\newpage
+\section{Introduction}
+Learning quantum field theory (QFT) for the first time, after first learning quantum mechanics (QM), one is (or maybe, rather, I was) struck by the change of emphasis: The notion of the quantum state, which plays such an essential role in QM, from the stationary states of the Bohr atom, over the Schr"odinger equation to the interpretation debates over measurement and collapse, seems to fade from view when doing QFT. Not that it's gone --- as any physicist will be quick to tell you, QFT is simply a quantum theory, with all the general structure of QM taken over unchanged. But the quantum state is hardly mentioned, when dealing with Feynman diagrams, path integrals and all the other mainstays of an introductory QFT course.
 
 This was not always so: The QFT of the late 1920s and 1930s developed as a straightforward extension and generalization of QM; consequently, writing down Schr"odinger equations and calculating the energies of stationary states were the prime concerns of the physicists working with QFT at the time.\footnote{One just needs to look at the first paper on the full theory of quantum electrodynamics \citep{heisenberg_1929_zur-quantendynamik}.} But, as is well-known, this early QFT suffered from crippling defects, most notably the divergence problem, i.e., that all calculations appeared to give nonsensical, infinite results, once one went past the first approximation. The divergence difficulties of QFT (or at least of quantum electrodynamics) were solved through the renormalization techniques developed in the late 1940s. As was frequently stressed already at the time, the success of the renormalization program meant that the conceptual foundations of QM could be taken over to field theory with only slight modifications, as opposed to what physicists had generally believed all through the 1930s and early 1940s. But even though the foundations did not change (or change only just enough so that they could stay the same, as Weinberg has characterized this development \citep[p.18]{weinberg_1977_the-search}), the formalism of renormalized QFT (finding its first definitive formulation in Freeman Dyson's systematization of Richard Feynman's modular diagrammatic approach) looked quite different from that of 1930s QFT and a lot more like what we call QFT today.
 
