--- a/quant-ph-0605180/qmcARC.tex
+++ b/quant-ph-0605180/qmcARC.tex
@@ -1,5 +1,6 @@
 
 \documentclass[onecolumn,fleqn, 11pt]{revtex4}
+\usepackage[noBBpl,sc]{mathpazo}
 
 
 \usepackage{ifthen}
@@ -37,10 +38,15 @@ bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
 
-\linespread{1.0}
+\linespread{1.05}
 \usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
-\tolerance=2000
-\hbadness=2000
+\sloppy
+\raggedbottom
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage{microtype}
+\setcounter{tocdepth}{3}
 
 \def\dbar{{\mathchar'26\mkern-12mu d}}
 \newcommand{\vecb}[1]{\overset{{}_{\leftarrow}}{#1}}
@@ -3274,7 +3280,7 @@ Consider the evolution of a pure state:
 \beq
 \psi^{t} \ \ = \ \ U \psi^{t{=}0} 
 \eeq
-From the rerlation ${\psi^{t+dt} =(1-idt\mathcal{H})\psi^{t}}$ it follows that  
+From the relation ${\psi^{t+dt} =(1-idt\mathcal{H})\psi^{t}}$ it follows that  
 \beq 
 \frac{d\psi}{dt} \ \ = \ \ -i\mathcal{H}\psi
 \eeq
