--- a/1906.12229/spacetime-wavefunction.tex
+++ b/1906.12229/spacetime-wavefunction.tex
@@ -1,4 +1,4 @@
-\documentclass[aps,twocolumn,superscriptaddress,showpacs,amsmath,amssymb,nofootinbib]{revtex4}
+\documentclass[12pt, onecolumn, aps,superscriptaddress,showpacs,amsmath,amssymb,nofootinbib]{revtex4-2}
 
 \usepackage{graphicx}% Include figure files
 \usepackage{dcolumn}% Align table columns on decimal point
@@ -11,15 +11,50 @@
 \usepackage{graphicx}
 \usepackage{url}
 \usepackage{color}
-\usepackage{hyperref}
 \definecolor{refcolor}{RGB}{0,0,190}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
 \hypersetup{
-    colorlinks,
-    citecolor=refcolor,
-    filecolor=refcolor,
-    linkcolor=refcolor,
-    urlcolor=refcolor
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
 }
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 
 %\usepackage[showframe,%Uncomment any one of the following lines to test 
 %%scale=0.7, marginratio={1:1, 2:3}, ignoreall,% default settings
