--- a/0703160/0703160.tex
+++ b/0703160/0703160.tex
@@ -28,7 +28,30 @@ bookmarksopenlevel=10
 %\usepackage{amsmath,amsthm,amscd,amssymb}
 \usepackage[noBBpl]{mathpazo}
 \linespread{1.1}
-\usepackage[letterpaper, margin=1.3in]{geometry}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{microtype}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 
 \usepackage{epsf}
 \usepackage{amsfonts}
@@ -126,7 +149,7 @@ measured by an apparatus ${\cal A}$. For simplicity, we start with the smallest 
 with a two-dimensional Hilbert space ${\cal H}_{\cal S}$ (although our derivation will be extended to arbitrarily large systems). In a two dimensional ${\cal H}_{\cal S}$ any state of the system can be written as a superposition of a pair of linearly independent states, $\ket {\psi_{\cal S}} = \alpha \ket v + \beta \ket w $. This freedom to choose any two linearly independent $\ket v$ and $\ket w$ that need {\it not} be orthogonal is guaranteed by the principle of superposition implicit in postulate (i). A measurement of ${\cal S}$ by an apparatus ${\cal A}$ that starts in a ``ready to measure'' state $\ket {A_0}$:
 \begin{eqnarray}
 \ket {\psi_{\cal S}}\ket {A_0}=( \alpha \ket v + \beta \ket w )\ket {A_0} \Longrightarrow \nonumber \\
- \Longrightarrow \alpha \ket v \ket {A_v}+ \beta \ket w \ket {A_w} = \ket {\Phi_{\cal SA}} \ ,
+  \alpha \ket v \ket {A_v}+ \beta \ket w \ket {A_w} = \ket {\Phi_{\cal SA}} \ ,
 \end{eqnarray}
 yields the desired information transfer from ${\cal S}$ to ${\cal A}$: The state of ${\cal A}$ now contains a record of ${\cal S}$. 
 Above we assumed postulate (iii) (there are states that are left intact, $ \ket v \ket {A_0} \rightarrow \ket v \ket {A_v}, \ \ket w \ket {A_0} \rightarrow \ket w \ket {A_w} $),
